package main.java;

abstract class PizzaFactory  {
	public abstract Pizza creer(String name);

}
